# onnx-burn-cli

./: Cargo.toml  README.md  generate_test_models.py
openspec/changes/archive/2026-01-31-kokoro-tts/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-31-onnx-burn-cli/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-31-operator-coverage/: design.md  tasks.md
openspec/changes/operator-coverage/: proposal.md  tasks.md
openspec/changes/operator-coverage/specs/comparison-ops/: spec.md
openspec/changes/operator-coverage/specs/conv-ops/: spec.md
openspec/changes/operator-coverage/specs/reduction-ops/: spec.md
openspec/specs/audio-ops/: spec.md
openspec/specs/logical-ops/: spec.md
openspec/specs/sequence-ops/: spec.md
openspec/specs/trig-ops/: spec.md
src/: main.rs
src/cli/: devices.rs  infer.rs  info.rs  mod.rs
src/compiler/: mod.rs
src/input/: image.rs
src/ops/: activation.rs  advanced.rs  arithmetic.rs  audio.rs  comparison.rs  conv.rs  linear.rs  mod.rs  normalization.rs  reduction.rs  rnn.rs  sequence.rs  shape.rs  unary.rs
src/runtime/: executor.rs  mod.rs  tensor.rs  value_store.rs  weight_loader.rs
test_data/: simple_cnn.onnx  simple_cnn.onnx.data  simple_linear.onnx
test_data/operator_tests/: abs_test.onnx  ceil_test.onnx  cos_test.onnx  cosh_test.onnx  exp_test.onnx  floor_test.onnx  gelu_test.onnx  log_test.onnx  neg_test.onnx  reciprocal_test.onnx  relu_test.onnx  round_test.onnx  sigmoid_test.onnx  sign_test.onnx  sin_test.onnx  sinh_test.onnx  sqrt_test.onnx  tan_test.onnx  tanh_test.onnx
(+12 files in other folders)
