[package]
name = "nnx"
version = "0.0.0"
edition = "2024"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# ONNX parsing
onnx-ir = "0.20"

# Tensor operations + GPU backend
burn = "0.20"
burn-wgpu = "0.20"

# Image loading
image = "0.25"

# Error handling
thiserror = "2"
anyhow = "1"
wgpu = "26"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread"] }
